Funcionalidad para barra de navegacion

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </header>
     <main class="main-content">
-        <section class="info-section">
+        <section class="info-section" id="inicio">
             <div class="info-box">
                 <h2>¡Hola! Soy Anlly Baleria Zapata 👩‍💻</h2>
                 <p>
@@ -47,7 +47,7 @@
             </div>
         </section>
 
-        <section class="about-section">
+        <section class="about-section" id="acercade">
             <h2 class="section-title">Acerca de mí</h2>
             <div class="about-container">
                 <div class="about-photo">
@@ -65,7 +65,7 @@
             </div>
         </section>
 
-        <section class="skills-section">
+        <section class="skills-section" id="habilidades">
             <h2 class="section-title">Mis Habilidades</h2>
 
             <div class="skills-container">
@@ -96,7 +96,7 @@
         </section>
 
         <!-- Sección Mis Proyectos -->
-        <section class="projects-section">
+        <section class="projects-section" id="proyecto">
             <h2 class="section-title">Mis Proyectos</h2>
 
             <div class="projects-container">
