Funcionalidad formulario de navegacion

--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
                     <img src="assets/img/php.png" alt="Proyecto 1">
                     <h3>Jard Software</h3>
                     <p>Jard software consiste en el Desarrollo e Implementación de un Software de Inventarios, que
-                        presentare a una empresa que tiene complicaciones en la gestión y el manejo de su inventario.</p>
-                    <a href="https://github.com/Anlly-Baleria-Zapata/Jard-software-1" target="_blank" class="project-btn">Ver Proyecto</a>
+                        presentare a una empresa que tiene complicaciones en la gestión y el manejo de su inventario.
+                    </p>
+                    <a href="https://github.com/Anlly-Baleria-Zapata/Jard-software-1" target="_blank"
+                        class="project-btn">Ver Proyecto</a>
                 </div>
 
                 <!-- Proyecto 2 -->
@@ -114,7 +116,8 @@
                     <img src="assets/img/java.png" alt="Proyecto 2">
                     <h3>Proyecto Energia justa</h3>
                     <p>Podrá visualizar las estadisticas de energia de varios paises</p>
-                    <a href="https://github.com/Anlly-Baleria-Zapata/energia-justa" target="_blank" class="project-btn">Ver Proyecto</a>
+                    <a href="https://github.com/Anlly-Baleria-Zapata/energia-justa" target="_blank"
+                        class="project-btn">Ver Proyecto</a>
                 </div>
 
                 <!-- Proyecto 3 -->
@@ -122,7 +125,8 @@
                     <img src="assets/img/javascript-html5-and-css.png" alt="Proyecto 3">
                     <h3>Portafolio para fotografo</h3>
                     <p>Toda la informacion que necesitas de un fotografo su portafolio personal en un solo lugar</p>
-                    <a href="https://github.com/Anlly-Baleria-Zapata/portafolio-juan" target="_blank" class="project-btn">Ver Proyecto</a>
+                    <a href="https://github.com/Anlly-Baleria-Zapata/portafolio-juan" target="_blank"
+                        class="project-btn">Ver Proyecto</a>
                 </div>
             </div>
         </section>
@@ -149,13 +153,15 @@
 
                 <!-- Lado derecho: formulario -->
                 <div class="contact-form">
-                    <form action="#" method="POST">
-                        <input type="text" name="nombre" placeholder="Nombre" required>
-                        <input type="email" name="email" placeholder="Email" required>
-                        <textarea name="mensaje" rows="5" placeholder="Mensaje" required></textarea>
+                    <form id="contactForm">
+                        <input type="text" id="name" name="name" placeholder="Nombre" required />
+                        <input type="email" id="email" name="email" placeholder="Email" required />
+                        <textarea id="message" name="message" placeholder="Mensaje" required></textarea>
                         <button type="submit">Enviar</button>
                     </form>
+                    <p id="formMessage" style="margin-top:1rem; color:#FF00FF;"></p>
                 </div>
+
             </div>
         </section>
 
